--- a/src/app/home/person-form/person-form.component.html
+++ b/src/app/home/person-form/person-form.component.html
@@ -1,7 +1,16 @@
-<div>
-  <app-input [parentFormGroup]="personForm" [controlName]="firstName" [text]="'First Name:'"></app-input>
-  <app-input [parentFormGroup]="personForm" [controlName]="lastName"  [text]="'Last Name:'"></app-input>
-  <app-input [parentFormGroup]="personForm" [controlName]="friends"  [text]="'Friends:'"></app-input>
-  <app-input [parentFormGroup]="personForm" [controlName]="age"  [text]="'Age:'"></app-input>
-  <app-input [parentFormGroup]="personForm" [controlName]="weight"  [text]="'Weight:'"></app-input>
-</div>
+<mat-card class="formCard">
+  <form [formGroup]="personForm" (ngSubmit)="submitResult()">
+    <div class="inputContainer">
+      <app-input [parentFormGroup]="personForm" [controlName]="'firstName'" [text]="'First Name:'"></app-input>
+      <app-input [parentFormGroup]="personForm" [controlName]="'lastName'"  [text]="'Last Name:'"></app-input>
+      <app-input [parentFormGroup]="personForm" [controlName]="'friends'"  [text]="'Friends:'"></app-input>
+      <app-input [parentFormGroup]="personForm" [controlName]="'age'"  [text]="'Age:'"></app-input>
+      <app-input [parentFormGroup]="personForm" [controlName]="'weight'"  [text]="'Weight:'"></app-input>
+    </div>
+    <div class="buttonContainer">
+      <button mat-raised-button color="primary" [disabled]="personForm.invalid" type="submit">Submit</button>
+    </div>
+    
+  </form>
+</mat-card>
+
