--- a/src/app/home/input/input.component.html
+++ b/src/app/home/input/input.component.html
@@ -1,7 +1,5 @@
-<mat-card>
-  <mat-card-content>
-    <mat-form-field class="example-full-width">{{text}}
-      <input type="text" matInput placeholder="">
-    </mat-form-field>
-  </mat-card-content>
-</mat-card>
+<mat-form-field class="personInput">{{text}}
+  <input type="text" matInput placeholder="" [formControl]="inputControl">
+</mat-form-field>
+
+
