form updates, form submission appends to subject

--- a/src/app/home/input/input.component.html
+++ b/src/app/home/input/input.component.html
@@ -1,5 +1,5 @@
 <mat-form-field class="personInput">{{text}}
-  <input type="text" matInput placeholder="" [formControl]="inputControl">
+  <input type="{{type}}" matInput placeholder="" [formControl]="inputControl">
 </mat-form-field>
 
 
