charts page start, module changes

--- a/src/app/home/input/input.component.html
+++ b/src/app/home/input/input.component.html
@@ -1,5 +1,5 @@
 <mat-form-field class="personInput">{{text}}
-  <input type="{{type}}" matInput placeholder="" [formControl]="inputControl">
+  <input [type]="type" matInput [formControl]="inputControl">
 </mat-form-field>
 
 
