--- a/src/app/charts/charts.component.html
+++ b/src/app/charts/charts.component.html
@@ -2,6 +2,6 @@
   <app-chart-options (submission)="optionsSelected($event)"></app-chart-options>
 </section>
 
-<section *ngIf="selectedOptions">
+<section>
   <app-chart-visualization [chartSelection]="selectedOptions"></app-chart-visualization>
 </section>
