--- a/src/styles.sass
+++ b/src/styles.sass
@@ -1,1 +1,15 @@
-@import '@angular/material/prebuilt-themes/deeppurple-amber.css';
+@import '@angular/material/prebuilt-themes/deeppurple-amber.css'
+// Import material theming functions
+@import '~@angular/material/theming'
+
+$app-primary: mat-palette($mat-grey);
+$app-accent:  mat-palette($mat-light-blue);
+$app-warn:    mat-palette($mat-pink);
+
+$primary: mat-color($app-primary);
+$accent: mat-color($app-accent);
+$warn: mat-color($app-warn);
+
+.warning 
+  color: $warn
+  font-weight: bold
