all 3 chart types complete

--- a/src/app/charts/chart-visualization/chart-visualization.component.html
+++ b/src/app/charts/chart-visualization/chart-visualization.component.html
@@ -1,4 +1,7 @@
 
-<svg id="chart-svg" width="900" height="500">
+<div id="chartContainer">
+  <svg id="chart-svg" width="900" height="500"></svg>
+</div>
+
 
 
