--- a/src/app/not-found/not-found.component.html
+++ b/src/app/not-found/not-found.component.html
@@ -1,3 +1,9 @@
-<p>
-  not-found works!
-</p>
+<div class="notFound">
+  <h2>
+  The page you searched for wasn't found :(
+  </h2>
+
+  <h4>
+    Use the links in the header to navigate.
+  </h4>
+</div>
