--- a/src/styles.sass
+++ b/src/styles.sass
@@ -15,8 +15,8 @@ $warn: mat-color($app-warn);
   text-align: center
   font-weight: bold
 
-.bar 
+.shape 
   fill: $primary
 
-.bar:hover 
+.shape:hover 
   fill: $accent
