--- a/src/app/home/data-table/data-table.component.html
+++ b/src/app/home/data-table/data-table.component.html
@@ -1,5 +1,8 @@
-<table mat-table [dataSource]="dataSource" class="mat-elevation-z1">
+<div class="buttonContainer">
+  <button mat-raised-button color="primary" (click)="clear()">Clear Data</button>
+</div>
 
+<table mat-table [dataSource]="dataSource" class="mat-elevation-z1">
     <!-- First Name Column -->
     <ng-container matColumnDef="firstName">
       <th mat-header-cell *matHeaderCellDef> First Name </th>
