--- a/src/app/home/person-form/person-form.component.html
+++ b/src/app/home/person-form/person-form.component.html
@@ -1,11 +1,11 @@
 <mat-card class="formCard">
   <form [formGroup]="personForm" (ngSubmit)="submitResult()">
     <div class="inputContainer">
-      <app-input [parentFormGroup]="personForm" [controlName]="'firstName'" [text]="'First Name:'"></app-input>
-      <app-input [parentFormGroup]="personForm" [controlName]="'lastName'"  [text]="'Last Name:'"></app-input>
-      <app-input [parentFormGroup]="personForm" [controlName]="'friends'" [type]="'number'" [text]="'Friends:'"></app-input>
-      <app-input [parentFormGroup]="personForm" [controlName]="'age'" [type]="'number'" [text]="'Age:'"></app-input>
-      <app-input [parentFormGroup]="personForm" [controlName]="'weight'" [type]="'number'" [text]="'Weight (lbs):'"></app-input>
+      <app-input [parentFormGroup]="personForm" [controlName]="'firstName'" [type]="'text'" [text]="'First Name:'" [maxLength]="20"></app-input>
+      <app-input [parentFormGroup]="personForm" [controlName]="'lastName'"  [type]="'text'" [text]="'Last Name:'" [maxLength]="20"></app-input>
+      <app-input [parentFormGroup]="personForm" [controlName]="'friends'" [type]="'number'" [text]="'Friends:'" [maxLength]="3"></app-input>
+      <app-input [parentFormGroup]="personForm" [controlName]="'age'" [type]="'number'" [text]="'Age:'" [maxLength]="3"></app-input>
+      <app-input [parentFormGroup]="personForm" [controlName]="'weight'" [type]="'number'" [text]="'Weight (lbs):'" [maxLength]="3"></app-input>
     </div>
     <div class="buttonContainer">
       <button mat-raised-button color="primary" [disabled]="personForm.invalid" type="submit">Submit</button>
