--- a/src/app/home/person-form/person-form.component.sass
+++ b/src/app/home/person-form/person-form.component.sass
@@ -5,7 +5,8 @@
 
 .inputContainer 
   display: flex
-  justify-content: space-between
+  justify-content: center
+  flex-wrap: wrap
 
 .buttonContainer
   display: flex
